@@ -174,6 +174,7 @@ void Serialize(const TJob& job, NYson::IYsonConsumer* consumer, TStringBuf idKey
             .OptionalItem("events", job.Events)
             .OptionalItem("statistics", job.Statistics)
             .OptionalItem("is_stale", job.IsStale)
+            .OptionalItem("exec_attributes", job.ExecAttributes)
         .EndMap();
 }
 
