@@ -5,7 +5,6 @@
 #include "helpers.h"
 
 #include <yt/server/lib/scheduler/public.h>
-
 #include <yt/server/lib/scheduler/structs.h>
 
 #include <yt/ytlib/scheduler/proto/job.pb.h>
@@ -13,7 +12,6 @@
 #include <yt/ytlib/chunk_client/public.h>
 
 #include <yt/core/misc/phoenix.h>
-
 #include <yt/core/misc/statistics.h>
 
 namespace NYT::NControllerAgent {
